<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BMS Prototype</string>
    <string name="connectedDevice">Connected device</string>
    <string name="sendMessage">Send message</string>
    <string name="availableDevices">Available devices</string>
    <string name="connect">Connect</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This application needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="azimuth">"azimuth: "</string>
    <string name="pitch">"pitch: "</string>
    <string name="roll">"roll: "</string>
    <string name="inclination">"inclination: "</string>
    <string name="streamingButtonText">Stream your camera</string>
    <string name="playbackButtonText">Receive stream</string>
    <string name="noDeviceMessage">No devices found.</string>
    <string name="streaming_to">"You are currently streaming to "</string>
</resources>
