<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="bms.bmsprototype.PrototypeActivity"
    android:id="@+id/mainLayout">
    <TextView
        android:id="@+id/tvConnectedDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/connectedDevice" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvConnectedDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etxtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false" />

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/sendMessage"
        android:enabled="false"
        android:onClick="btnSendMessageOnClick" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAvailableDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/availableDevices" />

    <ListView
        android:animateLayoutChanges="true"
        android:id="@+id/lvAvailableDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6">

        <fragment android:name="bms.bmsprototype.fragment.PlaybackFragment"
            android:id="@+id/viewer"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/playback_fragment" />
        <fragment android:name="bms.bmsprototype.fragment.StreamingFragment"
            android:id="@+id/list"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/streaming_fragment" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDebug"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_weight="6" />

    </LinearLayout>
</LinearLayout>